v0.91 18-Oct-03
Specifying an IP address as the server name now works for addresses
that don't have a reverse DNS entry.
Added LocalPort option, and defaults to using a low numbered port.

v0.90 14-Oct-03
First Beta release.
